[package]
name = "ai-commit-assistant"
version = "0.1.0"
description = "AI-powered Git commit message generator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "ai-commit-assistant"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.18"
notify = "6.1"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
